--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,7 @@ dependencies:
   get: ^4.6.5
   intl: ^0.17.0
   libserialport: ^0.2.0+3
-
-
+  window_manager: ^0.2.5
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 
