--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   intl: ^0.17.0
   libserialport: ^0.2.0+3
   window_manager: ^0.2.5
+  fl_chart: ^0.55.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 
